rasn-compiler/src/linker/snapshots/rasn_compiler__linker__unnest__tests__unnests_inline_information_objects-2.snap
---
source: rasn-compiler/src/linker/unnest.rs
expression: test_obj
---
Assignment::Object(
    ObjectOrObjectSetAssignment {
        comments: "",
        name: "Test",
        parameterization: None,
        class: ClassLink::ByName(
            "TEST-CLASS",
        ),
        value: ASN1Information::ObjectSet(
            ObjectSet {
                values: [
                    ObjectSetValue::Reference(
                        "test-module.Test.0",
                    ),
                ],
                extensible: None,
            },
        ),
        module_header: None,
    },
)
